--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
     
     <title>Chinese Sensitive Keywords Detection</title>
 </head>
-<body class="">
+<body class="container">
     <content></content>
     <results></results>
 
